--- a/COIL_DRIVER_STM32.ioc
+++ b/COIL_DRIVER_STM32.ioc
@@ -2,9 +2,45 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.I2C2_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C2_TX.2.EventEnable=DISABLE
+Dma.I2C2_TX.2.Instance=DMA1_Channel1
+Dma.I2C2_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C2_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.I2C2_TX.2.Mode=DMA_NORMAL
+Dma.I2C2_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C2_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C2_TX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.I2C2_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_TX.2.RequestNumber=1
+Dma.I2C2_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.I2C2_TX.2.SignalID=NONE
+Dma.I2C2_TX.2.SyncEnable=DISABLE
+Dma.I2C2_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.I2C2_TX.2.SyncRequestNumber=1
+Dma.I2C2_TX.2.SyncSignalID=NONE
+Dma.MEMTOMEM.3.Direction=DMA_MEMORY_TO_MEMORY
+Dma.MEMTOMEM.3.EventEnable=DISABLE
+Dma.MEMTOMEM.3.Instance=DMA1_Channel2
+Dma.MEMTOMEM.3.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.MEMTOMEM.3.MemInc=DMA_MINC_ENABLE
+Dma.MEMTOMEM.3.Mode=DMA_NORMAL
+Dma.MEMTOMEM.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.MEMTOMEM.3.PeriphInc=DMA_PINC_ENABLE
+Dma.MEMTOMEM.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.MEMTOMEM.3.Priority=DMA_PRIORITY_LOW
+Dma.MEMTOMEM.3.RequestNumber=1
+Dma.MEMTOMEM.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.MEMTOMEM.3.SignalID=NONE
+Dma.MEMTOMEM.3.SyncEnable=DISABLE
+Dma.MEMTOMEM.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.MEMTOMEM.3.SyncRequestNumber=1
+Dma.MEMTOMEM.3.SyncSignalID=NONE
 Dma.Request0=SPI1_RX
 Dma.Request1=SPI1_TX
-Dma.RequestsNb=2
+Dma.Request2=I2C2_TX
+Dma.Request3=MEMTOMEM
+Dma.RequestsNb=4
 Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.0.EventEnable=DISABLE
 Dma.SPI1_RX.0.Instance=DMA2_Channel5
@@ -53,17 +89,18 @@ Mcu.CPN=STM32G431CBU6
 Mcu.Family=STM32G4
 Mcu.IP0=DMA
 Mcu.IP1=FDCAN1
-Mcu.IP10=USB
-Mcu.IP11=USB_DEVICE
+Mcu.IP10=USART3
+Mcu.IP11=USB
+Mcu.IP12=USB_DEVICE
 Mcu.IP2=I2C2
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI1
 Mcu.IP6=SYS
 Mcu.IP7=TIM1
-Mcu.IP8=TIM3
-Mcu.IP9=USART3
-Mcu.IPNb=12
+Mcu.IP8=TIM2
+Mcu.IP9=TIM3
+Mcu.IPNb=13
 Mcu.Name=STM32G431C(6-8-B)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13
@@ -72,45 +109,48 @@ Mcu.Pin10=PA7
 Mcu.Pin11=PC4
 Mcu.Pin12=PB0
 Mcu.Pin13=PB1
-Mcu.Pin14=PB11
-Mcu.Pin15=PB14
-Mcu.Pin16=PB15
-Mcu.Pin17=PA8
-Mcu.Pin18=PA9
-Mcu.Pin19=PA11
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB14
+Mcu.Pin17=PB15
+Mcu.Pin18=PA8
+Mcu.Pin19=PA9
 Mcu.Pin2=PF1-OSC_OUT
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PA15
-Mcu.Pin24=PC10
-Mcu.Pin25=PC11
-Mcu.Pin26=PB3
-Mcu.Pin27=PB4
-Mcu.Pin28=PB5
-Mcu.Pin29=PB6
+Mcu.Pin20=PA11
+Mcu.Pin21=PA12
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PA15
+Mcu.Pin25=PC10
+Mcu.Pin26=PC11
+Mcu.Pin27=PB3
+Mcu.Pin28=PB4
+Mcu.Pin29=PB5
 Mcu.Pin3=PA0
-Mcu.Pin30=PB7
-Mcu.Pin31=PB8-BOOT0
-Mcu.Pin32=PB9
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_SYS_VS_DBSignals
-Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin37=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=PB6
+Mcu.Pin31=PB7
+Mcu.Pin32=PB8-BOOT0
+Mcu.Pin33=PB9
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_SYS_VS_DBSignals
+Mcu.Pin36=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=38
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431CBUx
 MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -125,6 +165,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_HP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -166,6 +207,7 @@ PB0.Mode=PWM Generation2 CH2N
 PB0.Signal=TIM1_CH2N
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB10.Signal=S_TIM2_CH3
 PB11.Locked=true
 PB11.Signal=GPIO_Input
 PB14.GPIOParameters=GPIO_Label
@@ -297,6 +339,8 @@ SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,Output Compare3 CH3
+SH.S_TIM2_CH3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CalculateBaudRate=32.0 MBits/s
@@ -314,8 +358,13 @@ TIM1.PeriodNoDither=2
 TIM1.PulseNoDither_2=1
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
-TIM3.IPParameters=Prescaler,PeriodNoDither
-TIM3.PeriodNoDither=1000
+TIM2.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
+TIM2.IPParameters=Channel-Output Compare3 CH3,TIM_MasterOutputTrigger,PeriodNoDither
+TIM2.PeriodNoDither=7999
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM3.IPParameters=Prescaler,PeriodNoDither,ClockDivision
+TIM3.PeriodNoDither=20000
 TIM3.Prescaler=15
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
@@ -332,6 +381,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
