--- a/COIL_DRIVER_STM32.ioc
+++ b/COIL_DRIVER_STM32.ioc
@@ -75,15 +75,15 @@ Dma.SPI1_TX.1.SyncEnable=DISABLE
 Dma.SPI1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI1_TX.1.SyncRequestNumber=1
 Dma.SPI1_TX.1.SyncSignalID=NONE
-FDCAN1.CalculateBaudRateNominal=800000
-FDCAN1.CalculateTimeBitNominal=1250
-FDCAN1.CalculateTimeQuantumNominal=250.0
+FDCAN1.CalculateBaudRateNominal=400000
+FDCAN1.CalculateTimeBitNominal=2500
+FDCAN1.CalculateTimeQuantumNominal=500.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.I2C_Speed_Mode=I2C_Fast
 I2C2.IPParameters=I2C_Speed_Mode,Timing
-I2C2.Timing=0x00602173
+I2C2.Timing=0x00300F38
 KeepUserPlacement=false
 Mcu.CPN=STM32G431CBU6
 Mcu.Family=STM32G4
@@ -98,8 +98,8 @@ Mcu.IP4=RCC
 Mcu.IP5=SPI1
 Mcu.IP6=SYS
 Mcu.IP7=TIM1
-Mcu.IP8=TIM2
-Mcu.IP9=TIM3
+Mcu.IP8=TIM3
+Mcu.IP9=TIM6
 Mcu.IPNb=13
 Mcu.Name=STM32G431C(6-8-B)Ux
 Mcu.Package=UFQFPN48
@@ -109,41 +109,40 @@ Mcu.Pin10=PA7
 Mcu.Pin11=PC4
 Mcu.Pin12=PB0
 Mcu.Pin13=PB1
-Mcu.Pin14=PB10
-Mcu.Pin15=PB11
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin14=PB11
+Mcu.Pin15=PB14
+Mcu.Pin16=PB15
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA11
 Mcu.Pin2=PF1-OSC_OUT
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PA15
-Mcu.Pin25=PC10
-Mcu.Pin26=PC11
-Mcu.Pin27=PB3
-Mcu.Pin28=PB4
-Mcu.Pin29=PB5
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PA15
+Mcu.Pin24=PC10
+Mcu.Pin25=PC11
+Mcu.Pin26=PB3
+Mcu.Pin27=PB4
+Mcu.Pin28=PB5
+Mcu.Pin29=PB6
 Mcu.Pin3=PA0
-Mcu.Pin30=PB6
-Mcu.Pin31=PB7
-Mcu.Pin32=PB8-BOOT0
-Mcu.Pin33=PB9
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_SYS_VS_DBSignals
-Mcu.Pin36=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin37=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=PB7
+Mcu.Pin31=PB8-BOOT0
+Mcu.Pin32=PB9
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin34=VP_SYS_VS_DBSignals
+Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin38=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=40
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431CBUx
@@ -165,8 +164,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_HP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -207,7 +206,6 @@ PB0.Mode=PWM Generation2 CH2N
 PB0.Signal=TIM1_CH2N
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB10.Signal=S_TIM2_CH3
 PB11.Locked=true
 PB11.Signal=GPIO_Input
 PB14.GPIOParameters=GPIO_Label
@@ -282,53 +280,52 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_USB_Device_Init-USB_DEVICE-false-HAL-false
-RCC.ADC12Freq_Value=64000000
-RCC.AHBFreq_Value=64000000
-RCC.APB1Freq_Value=64000000
-RCC.APB1TimFreq_Value=64000000
-RCC.APB2Freq_Value=64000000
-RCC.APB2TimFreq_Value=64000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,11-MX_TIM2_Init-TIM2-false-HAL-true
+RCC.ADC12Freq_Value=32000000
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.CRSFreq_Value=48000000
-RCC.CortexFreq_Value=64000000
+RCC.CortexFreq_Value=32000000
 RCC.EXTERNAL_CLOCK_VALUE=12288000
-RCC.FCLKCortexFreq_Value=64000000
-RCC.FDCANFreq_Value=64000000
+RCC.FCLKCortexFreq_Value=32000000
+RCC.FDCANFreq_Value=32000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=64000000
+RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=64000000
-RCC.I2C2Freq_Value=64000000
-RCC.I2C3Freq_Value=64000000
-RCC.I2SFreq_Value=64000000
-RCC.IPParameters=ADC12Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-RCC.LPTIM1Freq_Value=64000000
-RCC.LPUART1Freq_Value=64000000
+RCC.I2C1Freq_Value=32000000
+RCC.I2C2Freq_Value=32000000
+RCC.I2C3Freq_Value=32000000
+RCC.I2SFreq_Value=32000000
+RCC.IPParameters=ADC12Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.LPTIM1Freq_Value=32000000
+RCC.LPUART1Freq_Value=32000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.PLLN=16
-RCC.PLLPoutputFreq_Value=128000000
+RCC.PLLPoutputFreq_Value=64000000
 RCC.PLLQ=RCC_PLLQ_DIV4
-RCC.PLLQoutputFreq_Value=64000000
+RCC.PLLQoutputFreq_Value=32000000
 RCC.PLLR=RCC_PLLR_DIV4
-RCC.PLLRCLKFreq_Value=64000000
-RCC.PWRFreq_Value=64000000
+RCC.PLLRCLKFreq_Value=32000000
+RCC.PWRFreq_Value=32000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=64000000
-RCC.SYSCLKFreq_VALUE=64000000
+RCC.SAI1Freq_Value=32000000
+RCC.SYSCLKFreq_VALUE=32000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=64000000
-RCC.USART1Freq_Value=64000000
-RCC.USART2Freq_Value=64000000
-RCC.USART3Freq_Value=64000000
+RCC.UART4Freq_Value=32000000
+RCC.USART1Freq_Value=32000000
+RCC.USART2Freq_Value=32000000
+RCC.USART3Freq_Value=32000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=16000000
-RCC.VCOOutputFreq_Value=256000000
+RCC.VCOOutputFreq_Value=128000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
@@ -339,11 +336,9 @@ SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
-SH.S_TIM2_CH3.0=TIM2_CH3,Output Compare3 CH3
-SH.S_TIM2_CH3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CLKPhase=SPI_PHASE_2EDGE
-SPI1.CalculateBaudRate=32.0 MBits/s
+SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_16BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,CLKPhase,BaudRatePrescaler
@@ -358,14 +353,15 @@ TIM1.PeriodNoDither=2
 TIM1.PulseNoDither_2=1
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
-TIM2.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
-TIM2.IPParameters=Channel-Output Compare3 CH3,TIM_MasterOutputTrigger,PeriodNoDither
-TIM2.PeriodNoDither=7999
-TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM3.IPParameters=Prescaler,PeriodNoDither,ClockDivision
+TIM3.IPParameters=Prescaler,PeriodNoDither,ClockDivision,TIM_MasterOutputTrigger,AutoReloadPreload
 TIM3.PeriodNoDither=20000
 TIM3.Prescaler=15
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM6.IPParameters=PeriodNoDither,AutoReloadPreload
+TIM6.PeriodNoDither=20000
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.APP_RX_DATA_SIZE=64
@@ -381,10 +377,10 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
