--- a/COIL_DRIVER_STM32.ioc
+++ b/COIL_DRIVER_STM32.ioc
@@ -75,23 +75,24 @@ Dma.SPI1_TX.1.SyncEnable=DISABLE
 Dma.SPI1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI1_TX.1.SyncRequestNumber=1
 Dma.SPI1_TX.1.SyncSignalID=NONE
-FDCAN1.CalculateBaudRateNominal=400000
-FDCAN1.CalculateTimeBitNominal=2500
-FDCAN1.CalculateTimeQuantumNominal=500.0
+FDCAN1.CalculateBaudRateNominal=1000000
+FDCAN1.CalculateTimeBitNominal=1000
+FDCAN1.CalculateTimeQuantumNominal=200.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.I2C_Speed_Mode=I2C_Fast
 I2C2.IPParameters=I2C_Speed_Mode,Timing
-I2C2.Timing=0x00300F38
+I2C2.Timing=0x00702991
 KeepUserPlacement=false
 Mcu.CPN=STM32G431CBU6
 Mcu.Family=STM32G4
 Mcu.IP0=DMA
 Mcu.IP1=FDCAN1
-Mcu.IP10=USART3
-Mcu.IP11=USB
-Mcu.IP12=USB_DEVICE
+Mcu.IP10=TIM7
+Mcu.IP11=USART3
+Mcu.IP12=USB
+Mcu.IP13=USB_DEVICE
 Mcu.IP2=I2C2
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -100,7 +101,7 @@ Mcu.IP6=SYS
 Mcu.IP7=TIM1
 Mcu.IP8=TIM3
 Mcu.IP9=TIM6
-Mcu.IPNb=13
+Mcu.IPNb=14
 Mcu.Name=STM32G431C(6-8-B)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13
@@ -135,14 +136,15 @@ Mcu.Pin34=VP_SYS_VS_DBSignals
 Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin37=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin38=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin38=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=39
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431CBUx
@@ -166,6 +168,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_HP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -280,52 +283,53 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,11-MX_TIM2_Init-TIM2-false-HAL-true
-RCC.ADC12Freq_Value=32000000
-RCC.AHBFreq_Value=32000000
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=32000000
-RCC.APB2Freq_Value=32000000
-RCC.APB2TimFreq_Value=32000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,11-MX_TIM6_Init-TIM6-false-HAL-true
+RCC.ADC12Freq_Value=80000000
+RCC.AHBFreq_Value=80000000
+RCC.APB1Freq_Value=80000000
+RCC.APB1TimFreq_Value=80000000
+RCC.APB2Freq_Value=80000000
+RCC.APB2TimFreq_Value=80000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.CRSFreq_Value=48000000
-RCC.CortexFreq_Value=32000000
+RCC.CortexFreq_Value=80000000
 RCC.EXTERNAL_CLOCK_VALUE=12288000
-RCC.FCLKCortexFreq_Value=32000000
-RCC.FDCANFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=80000000
+RCC.FDCANFreq_Value=80000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=32000000
+RCC.HCLKFreq_Value=80000000
 RCC.HSE_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=32000000
-RCC.I2C2Freq_Value=32000000
-RCC.I2C3Freq_Value=32000000
-RCC.I2SFreq_Value=32000000
-RCC.IPParameters=ADC12Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-RCC.LPTIM1Freq_Value=32000000
-RCC.LPUART1Freq_Value=32000000
+RCC.I2C1Freq_Value=80000000
+RCC.I2C2Freq_Value=80000000
+RCC.I2C3Freq_Value=80000000
+RCC.I2SFreq_Value=80000000
+RCC.IPParameters=ADC12Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.LPTIM1Freq_Value=80000000
+RCC.LPUART1Freq_Value=80000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.PLLPoutputFreq_Value=64000000
+RCC.PLLN=20
+RCC.PLLPoutputFreq_Value=160000000
 RCC.PLLQ=RCC_PLLQ_DIV4
-RCC.PLLQoutputFreq_Value=32000000
+RCC.PLLQoutputFreq_Value=80000000
 RCC.PLLR=RCC_PLLR_DIV4
-RCC.PLLRCLKFreq_Value=32000000
-RCC.PWRFreq_Value=32000000
+RCC.PLLRCLKFreq_Value=80000000
+RCC.PWRFreq_Value=80000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=32000000
-RCC.SYSCLKFreq_VALUE=32000000
+RCC.SAI1Freq_Value=80000000
+RCC.SYSCLKFreq_VALUE=80000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=32000000
-RCC.USART1Freq_Value=32000000
-RCC.USART2Freq_Value=32000000
-RCC.USART3Freq_Value=32000000
+RCC.UART4Freq_Value=80000000
+RCC.USART1Freq_Value=80000000
+RCC.USART2Freq_Value=80000000
+RCC.USART3Freq_Value=80000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=16000000
-RCC.VCOOutputFreq_Value=128000000
+RCC.VCOOutputFreq_Value=320000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
@@ -338,7 +342,7 @@ SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CLKPhase=SPI_PHASE_2EDGE
-SPI1.CalculateBaudRate=16.0 MBits/s
+SPI1.CalculateBaudRate=40.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_16BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,CLKPhase,BaudRatePrescaler
@@ -349,19 +353,23 @@ TIM1.IPParameters=PeriodNoDither,TIM_MasterOutputTrigger,TIM_MasterOutputTrigger
 TIM1.OC2Preload_PWM=DISABLE
 TIM1.OCFastMode_PWM-PWM\ Generation2\ CH2N=TIM_OCFAST_ENABLE
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2N=TIM_OCMODE_PWM2
-TIM1.PeriodNoDither=2
-TIM1.PulseNoDither_2=1
+TIM1.PeriodNoDither=12
+TIM1.PulseNoDither_2=6
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV4
 TIM3.IPParameters=Prescaler,PeriodNoDither,ClockDivision,TIM_MasterOutputTrigger,AutoReloadPreload
 TIM3.PeriodNoDither=20000
-TIM3.Prescaler=15
+TIM3.Prescaler=60
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM6.IPParameters=PeriodNoDither,AutoReloadPreload
 TIM6.PeriodNoDither=20000
+TIM7.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM7.IPParameters=PeriodNoDither,AutoReloadPreload,Prescaler
+TIM7.PeriodNoDither=20000
+TIM7.Prescaler=4
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.APP_RX_DATA_SIZE=64
@@ -381,6 +389,8 @@ VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
