--- a/COIL_DRIVER_STM32.ioc
+++ b/COIL_DRIVER_STM32.ioc
@@ -89,19 +89,20 @@ Mcu.CPN=STM32G431CBU6
 Mcu.Family=STM32G4
 Mcu.IP0=DMA
 Mcu.IP1=FDCAN1
-Mcu.IP10=TIM7
-Mcu.IP11=USART3
-Mcu.IP12=USB
-Mcu.IP13=USB_DEVICE
+Mcu.IP10=TIM6
+Mcu.IP11=TIM7
+Mcu.IP12=USART3
+Mcu.IP13=USB
+Mcu.IP14=USB_DEVICE
 Mcu.IP2=I2C2
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI1
 Mcu.IP6=SYS
 Mcu.IP7=TIM1
-Mcu.IP8=TIM3
-Mcu.IP9=TIM6
-Mcu.IPNb=14
+Mcu.IP8=TIM2
+Mcu.IP9=TIM3
+Mcu.IPNb=15
 Mcu.Name=STM32G431C(6-8-B)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13
@@ -110,41 +111,42 @@ Mcu.Pin10=PA7
 Mcu.Pin11=PC4
 Mcu.Pin12=PB0
 Mcu.Pin13=PB1
-Mcu.Pin14=PB11
-Mcu.Pin15=PB14
-Mcu.Pin16=PB15
-Mcu.Pin17=PA8
-Mcu.Pin18=PA9
-Mcu.Pin19=PA11
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB14
+Mcu.Pin17=PB15
+Mcu.Pin18=PA8
+Mcu.Pin19=PA9
 Mcu.Pin2=PF1-OSC_OUT
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PA15
-Mcu.Pin24=PC10
-Mcu.Pin25=PC11
-Mcu.Pin26=PB3
-Mcu.Pin27=PB4
-Mcu.Pin28=PB5
-Mcu.Pin29=PB6
+Mcu.Pin20=PA11
+Mcu.Pin21=PA12
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PA15
+Mcu.Pin25=PC10
+Mcu.Pin26=PC11
+Mcu.Pin27=PB3
+Mcu.Pin28=PB4
+Mcu.Pin29=PB5
 Mcu.Pin3=PA0
-Mcu.Pin30=PB7
-Mcu.Pin31=PB8-BOOT0
-Mcu.Pin32=PB9
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_SYS_VS_DBSignals
-Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin37=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=PB6
+Mcu.Pin31=PB7
+Mcu.Pin32=PB8-BOOT0
+Mcu.Pin33=PB9
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_SYS_VS_DBSignals
+Mcu.Pin36=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin4=PA1
+Mcu.Pin40=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=40
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431CBUx
@@ -172,8 +174,12 @@ NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_HP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=MOS1
 PA0.Locked=true
 PA0.Signal=GPIO_Output
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=MOS2
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA11.Mode=Device
@@ -187,7 +193,9 @@ PA14.Signal=SYS_JTCK-SWCLK
 PA15.Mode=JTAG_5_pins
 PA15.Signal=SYS_JTDI
 PA2.Locked=true
-PA2.Signal=GPIO_Output
+PA2.Signal=EVENTOUT
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=MOS4
 PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
@@ -209,6 +217,7 @@ PB0.Mode=PWM Generation2 CH2N
 PB0.Signal=TIM1_CH2N
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB10.Signal=S_TIM2_CH3
 PB11.Locked=true
 PB11.Signal=GPIO_Input
 PB14.GPIOParameters=GPIO_Label
@@ -283,7 +292,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,11-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,11-MX_TIM6_Init-TIM6-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.ADC12Freq_Value=80000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -340,6 +349,8 @@ SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CalculateBaudRate=5.0 MBits/s
@@ -357,6 +368,13 @@ TIM1.PeriodNoDither=12
 TIM1.PulseNoDither_2=6
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM2.IPParameters=Channel-PWM Generation3 CH3,Prescaler,PeriodNoDither,PulseNoDither_3,TIM_MasterSlaveMode,ClockDivision
+TIM2.PeriodNoDither=500
+TIM2.Prescaler=350
+TIM2.PulseNoDither_3=450
+TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV4
 TIM3.IPParameters=Prescaler,PeriodNoDither,ClockDivision,TIM_MasterOutputTrigger,AutoReloadPreload
