Motor speed, direction, and pulseCount working
Motor speed, direction, and pulseCount working

--- a/COIL_DRIVER_STM32.ioc
+++ b/COIL_DRIVER_STM32.ioc
@@ -167,6 +167,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -367,11 +368,12 @@ TIM1.PulseNoDither_2=6
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
-TIM2.IPParameters=Prescaler,PeriodNoDither,PulseNoDither_3,TIM_MasterSlaveMode,ClockDivision,Channel-PWM Generation3 CH3
-TIM2.PeriodNoDither=500
-TIM2.Prescaler=350
-TIM2.PulseNoDither_3=450
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM2.IPParameters=Prescaler,PeriodNoDither,PulseNoDither_3,TIM_MasterSlaveMode,ClockDivision,Channel-PWM Generation3 CH3,TIM_MasterOutputTrigger
+TIM2.PeriodNoDither=3000
+TIM2.Prescaler=20
+TIM2.PulseNoDither_3=2500
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV4
